docs: add about page

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,7 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+import { Callout } from 'nextra-theme-docs'
+
+<Callout type="warning" emoji="ℹ️">
+  Coming Soon
+</Callout>
