refactor: change the content to main page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,18 @@
-# Introduction
+## Introduction
 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project
+Welcome to easy-hooks-ts! React hook library, ready to use, written in Typescript.
 
-## What is Nextra?
+## Overview
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Easy Hooks TS is a collection of hooks and utilities for React. It is currently available for use in Node environments and works with any react meta framework like next, vite, astro. Support for SSR and browsers is coming soon.
 
-## Documentation
+## ✨ Features
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+A high-quality & reliable React Hooks library
+
+- Easy to learn and use
+- Supports SSR
+- Special treatment for functions, avoid closure problems
+- Contains a large number of advanced Hooks that are refined from business scenarios
+- Contains a comprehensive collection of basic Hooks
+- Written in TypeScript with predictable static types
