docs: refactor the message on getting started

--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -61,7 +61,6 @@ export const Component = () => {
 
 import { Callout } from 'nextra-theme-docs'
 
-<Callout emoji="👾">
-  **Space Invaders** is a 1978 shoot 'em up arcade game developed by Tomohiro
-  Nishikado.
+<Callout type="warning" emoji="ℹ️">
+  Coming Soon
 </Callout>
