docs: add demo with stackblitz

--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,3 +1,6 @@
+import StackBlitz from '../components/StackBlitz'
+
+
 ## Getting Started
 A quick tutorial to get you up and running with Easy Hooks TS.
 
@@ -59,8 +62,8 @@ export const Component = () => {
 
 ## Demo
 
-import { Callout } from 'nextra-theme-docs'
-
-<Callout type="warning" emoji="ℹ️">
-  Coming Soon
-</Callout>
+<StackBlitz
+  name="react-ts-z7abvy"
+  openFile="App.tsx"
+  view="both"
+/>
