--- a/pages/releases.mdx
+++ b/pages/releases.mdx
@@ -1,7 +1,48 @@
-## Releases
+# Releases
 
-import { Callout } from 'nextra-theme-docs'
+## [0.7.0](https://github.com/mmartinsoliv/easy-hooks-ts/compare/v0.6.0...v0.7.0) (2023-04-19)
 
-<Callout type="warning" emoji="ℹ️">
-  Coming Soon
-</Callout>
+### Features
+
+* **fetch:** create useFetch hook ([a485128](https://github.com/mmartinsoliv/easy-hooks-ts/commit/a485128fdfbece32064f93cdbccb69affd22511c))
+
+## [0.6.0](https://github.com/mmartinsoliv/easy-hooks-ts/compare/v0.5.0...v0.6.0) (2023-04-18)
+
+### Features
+
+* **hook:** create useDebounce hook ([6e436f6](https://github.com/mmartinsoliv/easy-hooks-ts/commit/6e436f67f7603c16a049e07f1d8546c50a760554))
+
+## [0.5.0](https://github.com/mmartinsoliv/easy-hooks-ts/compare/v0.4.0...v0.5.0) (2023-04-18)
+
+### Features
+
+* create useClipboard ([823d46b](https://github.com/mmartinsoliv/easy-hooks-ts/commit/823d46bbae6c7ca7a69a146593aed36825234ca1))
+
+## [0.4.0](https://github.com/mmartinsoliv/easy-hooks-ts/compare/v0.3.0...v0.4.0) (2023-04-14)
+
+### Features
+
+* **toggle:** create useToggle hook ([55376c2](https://github.com/mmartinsoliv/easy-hooks-ts/commit/55376c2ec611c56b07b7818ee8de121114a1e438))
+
+
+## [0.3.0](https://github.com/mmartinsoliv/easy-hooks-ts/compare/v0.2.0...v0.3.0) (2023-04-14)
+
+### Features
+
+* **usetest:** create new custom hook ([66b9c09](https://github.com/mmartinsoliv/easy-hooks-ts/commit/66b9c09142f789addf2db57fa50a462a8f1fcc48))
+
+## [0.2.0](https://github.com/mmartinsoliv/easy-hooks-ts/compare/v0.1.2...v0.2.0) (2023-04-14)
+
+### Bug Fixes
+
+* update ([57b2f3f](https://github.com/mmartinsoliv/easy-hooks-ts/commit/57b2f3fcbe894dadd9d8b078dece3394a4fbe9da))
+
+### Features
+
+* add compose to prompt ([29b1470](https://github.com/mmartinsoliv/easy-hooks-ts/commit/29b14704bd0c86e7a83669e51709b1c4de5eea34))
+* create cli to generate custom hook ([fd9ed80](https://github.com/mmartinsoliv/easy-hooks-ts/commit/fd9ed8050e56fcd13cb0facf93caeba2579ff433))
+* create function input to cli ([e09267b](https://github.com/mmartinsoliv/easy-hooks-ts/commit/e09267be28c001eab71600d16ade2fc0d4b0a8ef))
+* create function to verify some error ([8485342](https://github.com/mmartinsoliv/easy-hooks-ts/commit/84853424e8bf32d7bb9d7d3042339ce417cbfa43))
+* function to get dynamic path ([2244e05](https://github.com/mmartinsoliv/easy-hooks-ts/commit/2244e05844987df7a7b1aae8c7e9cdde04eb71fe))
+* **usehotkey:** create new custom hook ([be881b9](https://github.com/mmartinsoliv/easy-hooks-ts/commit/be881b9f4198282e36b77ccb4cc5984de5cdb382))
+* **usemedia:** create new custom hook ([7229193](https://github.com/mmartinsoliv/easy-hooks-ts/commit/7229193ee1fed80d37276c704a4dcee4cbba2362))
