docs: add example to useToggle

--- a/pages/hooks/useToggle.mdx
+++ b/pages/hooks/useToggle.mdx
@@ -1,3 +1,5 @@
+import StackBlitz from '../../components/StackBlitz'
+
 ## Hook - useToggle
 A hook that manage toggle. A simple abstraction to play with a boolean, don't repeat yourself.
 
@@ -27,8 +29,8 @@ export const Component = () => {
 
 ### Demo
 
-import { Callout } from 'nextra-theme-docs'
-
-<Callout type="warning" emoji="ℹ️">
-  Coming Soon
-</Callout>
+<StackBlitz
+  name="react-ts-z7abvy"
+  openFile="App.tsx"
+  view="both"
+/>
