--- a/pages/hooks/clipboard.mdx
+++ b/pages/hooks/clipboard.mdx
@@ -1,4 +1,4 @@
-## Hook - useClipboard
+# useClipboard
 
 The `useClipboard` hook accepts only one argument `{ timeout: 2000 }` (default 2000ms) which is the time the success message will be available on the screen.
 
