--- a/pages/hooks/fetch.mdx
+++ b/pages/hooks/fetch.mdx
@@ -1,6 +1,6 @@
 import StackBlitz from '../../components/StackBlitz'
 
-## Hook - useFetch
+# useFetch
 This is a custom hook called useFetch which is designed to make fetching data from an API easier in a React component.
 
 It takes an initialUrl as a parameter and returns an array of two values. The first value.
