--- a/pages/hooks/toggle.mdx
+++ b/pages/hooks/toggle.mdx
@@ -1,6 +1,6 @@
 import StackBlitz from '../../components/StackBlitz'
 
-## Hook - useToggle
+# useToggle
 A hook that manage toggle. A simple abstraction to play with a boolean, don't repeat yourself.
 
 ### API
