--- a/pages/hooks/counter.mdx
+++ b/pages/hooks/counter.mdx
@@ -1,6 +1,6 @@
 import StackBlitz from '../../components/StackBlitz'
 
-## Hook - useCounter
+# useCounter
 A simple abstraction to play with a counter, don't repeat yourself.
 
 ### API
